--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-scripts": "3.4.1",
     "react-sizeme": "^2.6.12",
     "react-spring": "^8.0.27",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
